# src/modules/publication-import/application/dtos/index.ts
@@ -1,3 +1,4 @@
 export * from "./publication-import-diagnostics";
 export * from "./publication-import-dry-run";
 export * from "./publication-import-mapping-preview";
+export * from "./publication-import-commit-plan";
